<resources>
    <string name="app_name">UDP Transmitter</string>
    <string name="test">TEST</string>
    <string name="hintport">Enter port number</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="submit">Submit</string>
    <string name="hintcmd">(DEV) Enter command</string>
    <string name="label_datarecv">Data received</string>
    <string name="r_left">Rotate left</string>
    <string name="r_right">Rotate right</string>
    <string name="forw">Forward</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="btn_rot">Set Rotation</string>
    <string name="btn_tra">Set Translation</string>
    <string name="btn_leg">Set Leg Coordinates</string>
    <string name="leg_menu">Leg</string>
    <string name="leg_1">Leg 1</string>
    <string name="leg_2">Leg 2</string>
    <string name="leg_3">Leg 3</string>
    <string name="leg_4">Leg 4</string>
    <string name="leg_5">Leg 5</string>
    <string name="leg_6">Leg 6</string>
    <string name="waitconnect">Waiting for connection...</string>
</resources>